# lg

./: .gitignore  CMakeLists.txt  flake.nix  help.c  help.h  main.c  makefile  pam.c  pam.h  screen.c  screen.h  widget.c  widget.h  winget.c  winget.h
.direnv/: flake-profile-1-link
src/: main.cpp  main.hpp
